--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Services"
     url: https://uktherapy.github.io/
   - title: "About us"
-    url: https://uktherapy.github.io/
+    url: https://uktherapy.github.io/about
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
